Add footer and final CSS adjustments

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
 
   <a href="#">Download Excursion (Coming soon!)</a>
 
+  <footer>
+    <p>&copy; 2026 Excursion. All rights reserved.</p>
+    <p>
+      <a href="#">Privacy Policy</a> |
+      <a href="#">Terms of Service</a>
+    </p>
+  </footer>
+
+
 </body>
 
 </html>
